# nocaro

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  alembic.ini  bot.py  example.config.py  example.config.toml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: annotator.yml  format-check.yml  formatting.yml  isort.yml  tests.yml
alembic/: README  env.py  script.py.mako
alembic/versions/: 0d6ce9e2e4e1_add_betting_system.py  1f8324d95ce2_add_achievements.py  3397fac93b9e_markov_opt_out.py  3e821400d673_new_persistent_event_poll_system.py  43b84ad11d26_config_system.py  47568b411bb7_markov_channel_fix.py  4ecfd82a61f0_default_model.py  70d2a767ff4d_fix_int_limit_on_stocks.py  7ac61d060175_add_nominations_table.py  7c5bb40227ae_remove_old_poll_system.py  b278c6800d6a_add_awards_db.py  b7d9e2f4a1c8_markov_indexes_model_cache.py  bae610f6cec1_new_poll.py  c1006e6f6d5d_add_api_keys.py  cb6068c9ff22_add_voting.py  d084ddbee31f_markov.py  e0ba0203243b_add_betting_system.py
cogs/: achievements.py  api.py  autoresponse.py  awards.py  betting.py  caption.py  config.py  database.py  economy.py  event.py  example.py  fire.py  fun.py  gm.py  image.py  mines.py  moderation.py  muter.py  osu.py  poll.py  stocks.py  theory.py  wormhole.py
cogs/disabled/: caption.py
cogs/utils/: audio.py  econfuncs.py  miscfuncs.py
maps/: maps.txt
models/: __init__.py  achievements.py  api.py  awards.py  betting.py  config.py  database.py  economy.py  event.py  fire.py  osu.py  poll.py  stocks.py
templates/: theory.txt  words.txt
tests/: test_migrations.py
utils/: achievements.py  audio.py  config.py  econfuncs.py  miscfuncs.py
