[project]
name = "nocaro"
version = "0.1.0"
description = ""
authors = [{ name = "Bobbyperson", email = "bobbyperson12345@gmail.com" }]
requires-python = ">=3.11,<3.13,!=3.12.5"
readme = "README.md"
license = "GNU GPLv3"
dependencies = [
    "sqlalchemy[aiosqlite]>=2.0.40",
    "pillow>=11.2.0",
    "discord-py[voice]>=2.6.3",
    "discord-pretty-help>=2.0.7",
    "ffmpy>=0.5.0",
    "pyquery>=2.0.1",
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "matplotlib>=3.10.1",
    "emoji>=2.14.1",
    "yfinance>=0.2.55",
    "pandas>=2.2.3",
    "pandas_market_calendars>=5.0.0",
    "discord-ext-menus",
    "anyio>=4.9.0",
    "alembic>=1.16.1",
    "numpy>=2.2.1",
    "aiohttp>=3.11.11",
    "soundfile>=0.13.1",
    "mutagen>=1.47.0",
    "pydub>=0.25.1",
    "markovify>=0.9.4",
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]

[project.optional-dependencies]
tts = [
    "kittentts",
]

[tool.uv]
package = false

[tool.uv.sources]
discord-ext-menus = { git = "https://github.com/Rapptz/discord-ext-menus" }
kittentts = { url = "https://github.com/KittenML/KittenTTS/releases/download/0.1/kittentts-0.1.0-py3-none-any.whl" }

[tool.ruff]
exclude = [
    "alembic/versions"
]

[tool.ruff.lint]
select = [
    "A004", # Check for import shadowing builtin functions: https://docs.astral.sh/ruff/rules/builtin-import-shadowing/
    "RUF",
    "UP",
    "I",
    "ASYNC",
    "F",
    "FURB",
    "PLC",
]
extend-ignore = [
    "ASYNC110", # I don't care
    "ASYNC221",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
