[project]
name = "nocaro"
version = "0.1.0"
description = ""
authors = [{ name = "Bobbyperson", email = "bobbyperson12345@gmail.com" }]
requires-python = ">=3.13,<3.14"
readme = "README.md"
license = "GNU GPLv3"
dependencies = [
    "sqlalchemy[aiosqlite]>=2.0.51",
    "pillow>=12.1.1",
    "discord-py[voice]>=2.7.1",
    "discord-pretty-help>=2.0.7",
    "ffmpy>=1.0.0",
    "pyquery>=2.0.1",
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "matplotlib>=3.11.0",
    "emoji>=2.15.0",
    "yfinance>=1.4.1",
    "pandas>=3.0.3",
    "pandas_market_calendars>=5.4.0",
    "discord-ext-menus",
    "anyio>=4.14.0",
    "alembic>=1.18.2",
    "numpy>=2.4.6",
    "aiohttp>=3.14.1",
    "soundfile>=0.14.0",
    "mutagen>=1.47.0",
    "pydub>=0.25.1",
    "markovify>=0.9.4",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]

[project.optional-dependencies]
tts = [
    "kittentts",
]

[tool.uv]
package = false

[tool.uv.sources]
discord-ext-menus = { git = "https://github.com/Rapptz/discord-ext-menus" }
kittentts = { url = "https://github.com/KittenML/KittenTTS/releases/download/0.8.1/kittentts-0.8.1-py3-none-any.whl" }

[tool.ruff]
exclude = [
    "alembic/versions"
]

[tool.ruff.lint]
select = [
    "A004", # Check for import shadowing builtin functions: https://docs.astral.sh/ruff/rules/builtin-import-shadowing/
    "RUF",
    "UP",
    "I",
    "ASYNC",
    "F",
    "FURB",
    "PLC",
]
extend-ignore = [
    "ASYNC110", # I don't care
    "ASYNC221",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
